PizzaTracker/force-app/main/default/objects/Incomplete_Referral_Requirement__mdt/Incomplete_Referral_Requirement__mdt.object-meta.xml
<CustomObject>
    <description>Houses data on the fields required to complete a Referral and close an Incomplete Referral Case.</description>
    <label>Incomplete Referral Requirement</label>
    <pluralLabel>Incomplete Referral Requirements</pluralLabel>
</CustomObject>