PizzaTracker/force-app/main/default/objects/Incomplete_Referral_Requirement__mdt/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <description>Used in a flow to display the current value of working record if the field is filled in. Do not fill manually.</description>
    <inlineHelpText>Used in a flow to display the current value of working record if the field is filled in. Do not fill manually.</inlineHelpText>
    <label>Current Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>