PizzaTracker/force-app/main/default/objects/Incomplete_Referral_Requirement__mdt/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <label>Link to Record</label>
    <length>250</length>
    <type>Text</type>
</CustomField>