PizzaTracker/force-app/main/default/objects/Incomplete_Referral_Requirement__mdt/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <label>Object Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>