PizzaTracker/force-app/main/default/objects/Incomplete_Referral_Requirement__mdt/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <label>Record Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>