PizzaTracker/force-app/main/default/objects/Incomplete_Referral_Requirement__mdt/fields/Universally_Required__c.field-meta.xml
<CustomField>
    <fullName>Universally_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not the field in question is universally required regardless of Referral Insurance Type.</description>
    <label>Universally Required</label>
    <type>Checkbox</type>
</CustomField>